# PluralKit

./: .dockerignore  Cargo.toml  PluralKit.sln
.github/workflows/: docker.yml  gateway.yml
Myriad/Cache/: DiscordCacheExtensions.cs  RedisDiscordCache.cs
PluralKit.Bot/: Bot.cs  Init.cs
PluralKit.Bot/Services/: RedisGatewayService.cs  WebhookExecutorService.cs
proto/: discord_cache.proto
services/gateway/: Cargo.toml  build.rs
services/gateway/src/: config.rs  main.rs
services/gateway/src/discord/: cache.rs  gateway.rs  identify_queue.rs  shard_state.rs
services/gateway/src/util/: mod.rs  proto.rs  twilight.rs
services/gateway_worker/: Dockerfile  GatewayConfig.cs  GatewayWorker.csproj  Init.cs  packages.lock.json
services/gateway_worker/Services/: ShardInfoService.cs  WorkerMainService.cs
