[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
fred = { version = "5.2.0", features = ["network-logs", "full-tracing"] }
futures = "0.3.25"
prost = "0.11.5"
redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
signal-hook = "0.3.14"
tokio = { version = "1", features = ["full", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
twilight-gateway = { version = "0.14.0", features = ["simd-json"] }
twilight-model = "0.14.0"

[build-dependencies]
prost-build = "0.11.5"
